Bug 274293 - segfault while using the Artistic Text shape
Summary: segfault while using the Artistic Text shape
Status: RESOLVED FIXED
Alias: None
Product: karbon
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Jan Hambrecht
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-27 18:38 UTC by Elián Hanisch
Modified: 2011-05-28 12:37 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elián Hanisch 2011-05-27 18:38:38 UTC
Version:           unspecified (using KDE 4.6.2) 
OS:                Linux

both karbon and krita crash while playing with the artistic text shape.
I'm using Calligra from git, pulled a week or so ago.

Qt: 4.7.2 KDE: 4.6.2 Kubuntu 11.04
this is a 64 bits system


Reproducible: Always

Steps to Reproduce:
start new document
add a text shape
delete all text
add new text
crash



bt from karbon
Program received signal SIGSEGV, Segmentation fault.
0x00007ffff25ed75a in QString::insert(int, QChar const*, int) () from /usr/lib/libQtCore.so.4
(gdb) bt
#0  0x00007ffff25ed75a in QString::insert(int, QChar const*, int) () from /usr/lib/libQtCore.so.4
#1  0x00007fffdd1eddd1 in ArtisticTextShape::insertText (this=0xddf3d0, charIndex=0, str=...)
    at /home/m4v/dev/src/calligra/plugins/artistictextshape/ArtisticTextShape.cpp:618
#2  0x00007fffdd1f82be in AddTextRangeCommand::redo (this=0xe91640) at /home/m4v/dev/src/calligra/plugins/artistictextshape/AddTextRangeCommand.cpp:49
#3  0x00007ffff38fd393 in QUndoStack::push(QUndoCommand*) () from /usr/lib/libQtGui.so.4
#4  0x00007ffff79c00d5 in KarbonCanvas::addCommand (this=0x3e47440, command=<value optimized out>)
    at /home/m4v/dev/src/calligra/karbon/ui/widgets/KarbonCanvas.cpp:299
#5  0x00007fffdd1f4326 in ArtisticTextTool::addToTextCursor (this=0x4608830, str=<value optimized out>)
    at /home/m4v/dev/src/calligra/plugins/artistictextshape/ArtisticTextTool.cpp:629
#6  0x00007fffdd1f4864 in ArtisticTextTool::keyPressEvent (this=0x4608830, event=0x7fffffffd420)
    at /home/m4v/dev/src/calligra/plugins/artistictextshape/ArtisticTextTool.cpp:404
#7  0x00007ffff79bf1d1 in KarbonCanvas::keyPressEvent (this=0x3e47440, e=0x7fffffffd420) at /home/m4v/dev/src/calligra/karbon/ui/widgets/KarbonCanvas.cpp:249
#8  0x00007ffff32f16bc in QWidget::event(QEvent*) () from /usr/lib/libQtGui.so.4
#9  0x00007ffff32a0454 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#10 0x00007ffff32a56a1 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#11 0x00007ffff3fbf866 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#12 0x00007ffff268949c in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#13 0x00007ffff3342c49 in ?? () from /usr/lib/libQtGui.so.4
#14 0x00007ffff33430c6 in ?? () from /usr/lib/libQtGui.so.4
#15 0x00007ffff331e803 in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib/libQtGui.so.4
#16 0x00007ffff33470b2 in ?? () from /usr/lib/libQtGui.so.4
#17 0x00007fffec8ffbcd in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#18 0x00007fffec9003a8 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#19 0x00007fffec900639 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#20 0x00007ffff26b43ef in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#21 0x00007ffff3346d4e in ?? () from /usr/lib/libQtGui.so.4
#22 0x00007ffff2688882 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#23 0x00007ffff2688abc in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#24 0x00007ffff268cecb in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#25 0x00007ffff7bd9ef2 in kdemain (argc=<value optimized out>, argv=0x7fffffffe488) at /home/m4v/dev/src/calligra/karbon/main.cc:50
#26 0x00007ffff17a0eff in __libc_start_main () from /lib/x86_64-linux-gnu/libc.so.6
#27 0x0000000000400819 in _start ()

bt from krita
Program received signal SIGSEGV, Segmentation fault.
0x00007ffff780575a in QString::insert(int, QChar const*, int) () from /usr/lib/libQtCore.so.4
(gdb) bt
#0  0x00007ffff780575a in QString::insert(int, QChar const*, int) () from /usr/lib/libQtCore.so.4
#1  0x00007fffe0331dd1 in ArtisticTextShape::insertText (this=0x3a08220, charIndex=0, str=...)
    at /home/m4v/dev/src/calligra/plugins/artistictextshape/ArtisticTextShape.cpp:618
#2  0x00007fffe033c2be in AddTextRangeCommand::redo (this=0x3ef3200) at /home/m4v/dev/src/calligra/plugins/artistictextshape/AddTextRangeCommand.cpp:49
#3  0x00007ffff138b393 in QUndoStack::push(QUndoCommand*) () from /usr/lib/libQtGui.so.4
#4  0x00007fffe0338326 in ArtisticTextTool::addToTextCursor (this=0x62fe630, str=<value optimized out>)
    at /home/m4v/dev/src/calligra/plugins/artistictextshape/ArtisticTextTool.cpp:629
#5  0x00007fffe0338864 in ArtisticTextTool::keyPressEvent (this=0x62fe630, event=0x7fffffffd590)
    at /home/m4v/dev/src/calligra/plugins/artistictextshape/ArtisticTextTool.cpp:404
#6  0x00007ffff7303a01 in KisCanvasWidgetBase::processKeyPressEvent (this=0x53697e8, e=0x7fffffffd590)
    at /home/m4v/dev/src/calligra/krita/ui/canvas/kis_canvas_widget_base.cpp:269
#7  0x00007ffff0d7f6bc in QWidget::event(QEvent*) () from /usr/lib/libQtGui.so.4
#8  0x00007ffff0d2e454 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#9  0x00007ffff0d336a1 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#10 0x00007ffff1a4d866 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#11 0x00007ffff78a149c in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#12 0x00007ffff0dd0c49 in ?? () from /usr/lib/libQtGui.so.4
#13 0x00007ffff0dd10c6 in ?? () from /usr/lib/libQtGui.so.4
#14 0x00007ffff0dac803 in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib/libQtGui.so.4
#15 0x00007ffff0dd5a94 in ?? () from /usr/lib/libQtGui.so.4
#16 0x00007ffff78a0882 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#17 0x00007ffff78a0abc in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#18 0x00007ffff78a4ecb in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#19 0x00007ffff7bd95b5 in kdemain (argc=<value optimized out>, argv=0x7fffffffe488) at /home/m4v/dev/src/calligra/krita/main.cc:49
#20 0x00007fffef6beeff in __libc_start_main () from /lib/x86_64-linux-gnu/libc.so.6
#21 0x00000000004008a9 in _start ()
Comment 1 Jan Hambrecht 2011-05-28 12:37:50 UTC
Git commit aa39e7897b6948d79a76d72f5d08eb7814357710 by Jan Hambrecht.
Committed on 28/05/2011 at 12:36.
Pushed by jaham into branch 'master'.

when attempting to insert text into empty shape, use append text instead

BUG:274293

M  +14   -2    plugins/artistictextshape/ArtisticTextShape.cpp     

http://commits.kde.org/calligra/aa39e7897b6948d79a76d72f5d08eb7814357710