when attempting to insert text into empty shape, use append text instead

BUG:274293